--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,8 +43,7 @@ classifiers = [
     "Programming Language :: C++",
 ]
 dependencies = [
-    "numpy",
-    "pandas",
+    "numpy>=2.0.0",
 ]
 
 [project.urls]
