--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -66,73 +66,71 @@ jobs:
             echo "The new version $NEW_VERSION is greater than the latest version $LATEST_VERSION on PyPI."
           fi
 
-  setup_and_build:
+  build_wheels:
+    name: Build wheels on ${{ matrix.os }}
     needs: [details, check_pypi]
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.12"
-
-      - name: Install build dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install build
-
-      - name: Build source and wheel distribution
-        run: python -m build
+      - name: Build wheels with cibuildwheel
+        uses: pypa/cibuildwheel@v2.19.2
+        env:
+          CIBW_SKIP: "*-musllinux* pp* *_i686"
+          CIBW_BUILD_VERBOSITY: 1
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: dist
-          path: dist/
+          name: dist-${{ matrix.os }}
+          path: ./wheelhouse
 
   pypi_publish:
     name: Upload release to PyPI
-    needs: [setup_and_build, details]
+    needs: [build_wheels]
     runs-on: ubuntu-latest
     environment:
       name: release
+      url: https://pypi.org/p/pyterp/
     permissions:
       id-token: write
     steps:
-      - name: Download artifacts
+      - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
-          name: dist
           path: dist/
+          pattern: dist-*
+          merge-multiple: true
 
       - name: Publish distribution to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
 
   github_release:
     name: Create GitHub Release
-    needs: [setup_and_build, details]
+    needs: [pypi_publish, details] # Agora depende da publicação no PyPI
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Download artifacts
+      - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
-          name: dist
           path: dist/
+          pattern: dist-*
+          merge-multiple: true
 
       - name: Create GitHub Release
-        id: create_release
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
-          gh release create ${{ needs.details.outputs.tag_name }} dist/* --title ${{ needs.details.outputs.tag_name }} --generate-notes
+          gh release create "${{ needs.details.outputs.tag_name }}" dist/* \
+            --title "${{ env.PACKAGE_NAME }} ${{ needs.details.outputs.tag_name }}" \
+            --generate-notes
