--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,5 @@
 [build-system]
+# Esta seção permanece a mesma. Já está correta.
 requires = [
     "setuptools>=61.0",
     "wheel",
@@ -8,8 +9,9 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [project]
+# Esta seção permanece a mesma.
 name = "pyterp"
-dynamic = ["version"]
+dynamic = ["version"] # Essencial para que o setuptools-scm funcione
 authors = [
   { name="Jonathan Motta", email="jonathangmotta98@gmail.com" },
 ]
@@ -17,26 +19,16 @@ description = "A package for performing optimized k-NN IDW interpolation using C
 readme = "README.md"
 requires-python = ">=3.10"
 keywords = [
-    "interpolation",
-    "k-NN",
-    "IDW",
-    "C++",
-    "parallel",
-    "numpy",
-    "performance"
+    "interpolation", "k-NN", "IDW", "C++", "parallel", "numpy", "performance"
 ]
 classifiers = [
     "Development Status :: 3 - Alpha",
-
     "Intended Audience :: Science/Research",
     "Intended Audience :: Developers",
-
     "Operating System :: OS Independent",
-    
     "Topic :: Scientific/Engineering :: GIS",
     "Topic :: Scientific/Engineering :: Mathematics",
     "Topic :: Software Development :: Libraries :: Python Modules",
-
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -47,8 +39,30 @@ dependencies = [
 ]
 
 [project.urls]
+# Esta seção permanece a mesma.
 Homepage = "https://github.com/jgmotta98/PyTerp"
 "Bug Tracker" = "https://github.com/jgmotta98/PyTerp/issues"
 "Source Code" = "https://github.com/jgmotta98/PyTerp"
 
 [tool.setuptools-scm]
+
+[tool.setuptools]
+zip-safe = false
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[tool.setuptools.bdist_wheel]
+universal = false
+
+[[tool.setuptools.ext_modules]]
+name = "pyterp"
+sources = ["src/interpolator.cpp"]
+language = "c++"
+extra_compile_args = {cflags = ["-O3", "-fopenmp"], cflags_win = ["/O2", "/openmp"]}
+
+py_limited_api = false
+include_dirs = [
+    "src",
+    { "type" = "pybind11", "sub-dir" = "include" }
+]
