--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,60 +10,42 @@ on:
 
 env:
   PACKAGE_NAME: "pyterp"
-  OWNER: "jgmotta98"
 
 jobs:
   details:
     runs-on: ubuntu-latest
     outputs:
-      new_version: ${{ steps.release.outputs.new_version }}
-      suffix: ${{ steps.release.outputs.suffix }}
       tag_name: ${{ steps.release.outputs.tag_name }}
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Extract tag and Details
+      - name: Extract tag name from Git ref
         id: release
-        run: |
-          if [ "${{ github.ref_type }}" = "tag" ]; then
-            TAG_NAME=${GITHUB_REF#refs/tags/}
-            NEW_VERSION=$(echo $TAG_NAME | awk -F'-' '{print $1}')
-            SUFFIX=$(echo $TAG_NAME | grep -oP '[a-z]+[0-9]+' || echo "")
-            echo "new_version=$NEW_VERSION" >> "$GITHUB_OUTPUT"
-            echo "suffix=$SUFFIX" >> "$GITHUB_OUTPUT"
-            echo "tag_name=$TAG_NAME" >> "$GITHUB_OUTPUT"
-            echo "Version is $NEW_VERSION"
-            echo "Suffix is $SUFFIX"
-            echo "Tag name is $TAG_NAME"
-          else
-            echo "No tag found"
-            exit 1
-          fi
+        run: echo "tag_name=${GITHUB_REF#refs/tags/}" >> "$GITHUB_OUTPUT"
 
   check_pypi:
     needs: details
     runs-on: ubuntu-latest
     steps:
-      - name: Fetch information from PyPI
+      - name: Fetch latest version from PyPI
+        id: pypi
         run: |
-          response=$(curl -s https://pypi.org/pypi/${{ env.PACKAGE_NAME }}/json || echo "{}")
-          latest_previous_version=$(echo $response | jq --raw-output "select(.releases != null) | .releases | keys_unsorted | last")
-          if [ -z "$latest_previous_version" ]; then
-            echo "Package not found on PyPI."
-            latest_previous_version="0.0.0"
+          LATEST_PYPI_VERSION=$(curl -s "https://pypi.org/pypi/${{ env.PACKAGE_NAME }}/json" | jq -r ".info.version" || echo "0.0.0")
+          if [ "$LATEST_PYPI_VERSION" == "null" ]; then
+            LATEST_PYPI_VERSION="0.0.0"
           fi
-          echo "Latest version on PyPI: $latest_previous_version"
-          echo "latest_previous_version=$latest_previous_version" >> $GITHUB_ENV
+          echo "latest_pypi_version=$LATEST_PYPI_VERSION" >> "$GITHUB_OUTPUT"
+          echo "Latest version on PyPI is $LATEST_PYPI_VERSION"
 
-      - name: Compare versions and exit if not newer
+      - name: Compare new tag with PyPI version
         run: |
-          NEW_VERSION=${{ needs.details.outputs.new_version }}
-          LATEST_VERSION=$latest_previous_version
-          if [ "$(printf '%s\n' "$LATEST_VERSION" "$NEW_VERSION" | sort -rV | head -n 1)" != "$NEW_VERSION" ] || [ "$NEW_VERSION" == "$LATEST_VERSION" ]; then
-            echo "The new version $NEW_VERSION is not greater than the latest version $LATEST_VERSION on PyPI."
+          NEW_TAG="${{ needs.details.outputs.tag_name }}"
+          LATEST_PYPI_VERSION="${{ steps.pypi.outputs.latest_pypi_version }}"
+          
+          # Compara as versões (sort -V lida com semver)
+          if [ "$(printf '%s\n' "$LATEST_PYPI_VERSION" "$NEW_TAG" | sort -rV | head -n 1)" != "$NEW_TAG" ] || [ "$NEW_TAG" == "$LATEST_PYPI_VERSION" ]; then
+            echo "::error::New tag '${NEW_TAG}' is not greater than the latest PyPI version '${LATEST_PYPI_VERSION}'."
             exit 1
           else
-            echo "The new version $NEW_VERSION is greater than the latest version $LATEST_VERSION on PyPI."
+            echo "New tag '${NEW_TAG}' is valid and greater than PyPI version '${LATEST_PYPI_VERSION}'."
           fi
 
   build_wheels:
@@ -85,29 +67,26 @@ jobs:
         uses: pypa/cibuildwheel@v2.19.2
         env:
           SETUPTOOLS_SCM_PRETEND_VERSION: ${{ needs.details.outputs.tag_name }}
-
           CIBW_BEFORE_BUILD_LINUX: >
             bash -c "
               set -euxo pipefail
-
-              if command -v yum; then
-                yum install -y libgomp
-              elif command -v dnf; then
-                dnf install -y libgomp
-              elif command -v apt-get; then
-                apt-get update
-                apt-get install -y --no-install-recommends libgomp1
-              else
-                echo 'ERROR: Could not find a known package manager (yum, dnf, apt-get).' >&2
-                exit 1
+              if command -v yum; then yum install -y libgomp;
+              elif command -v dnf; then dnf install -y libgomp;
+              elif command -v apt-get; then apt-get update && apt-get install -y --no-install-recommends libgomp1;
+              else echo 'ERROR: Could not find a known package manager.' >&2; exit 1;
               fi
             "
-          
           CIBW_SKIP: "*-musllinux* pp* *_i686"
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist-${{ matrix.os }}
+          path: ./wheelhouse
 
   pypi_publish:
     name: Upload release to PyPI
-    needs: [build_wheels]
+    needs: build_wheels
     runs-on: ubuntu-latest
     environment:
       name: release
@@ -115,19 +94,18 @@ jobs:
     permissions:
       id-token: write
     steps:
-      - name: Download all artifacts
+      - name: Download all wheels
         uses: actions/download-artifact@v4
         with:
-          path: dist/
+          path: dist
           pattern: dist-*
           merge-multiple: true
-
-      - name: Publish distribution to PyPI
+      - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
 
   github_release:
     name: Create GitHub Release
-    needs: [pypi_publish, details] # Agora depende da publicação no PyPI
+    needs: [pypi_publish, details]
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -136,14 +114,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      - name: Download all artifacts
+      - name: Download all wheels
         uses: actions/download-artifact@v4
         with:
-          path: dist/
+          path: dist
           pattern: dist-*
           merge-multiple: true
-
       - name: Create GitHub Release
         env:
           GH_TOKEN: ${{ github.token }}
