--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,6 @@ requires = [
     "setuptools>=61.0",
     "wheel",
     "pybind11>=2.10",
-    "setuptools-scm"
 ]
 build-backend = "setuptools.build_meta"
 
@@ -41,4 +40,5 @@ Homepage = "https://github.com/jgmotta98/PyTerp"
 "Bug Tracker" = "https://github.com/jgmotta98/PyTerp/issues"
 "Source Code" = "https://github.com/jgmotta98/PyTerp"
 
-[tool.setuptools-scm]
+[tool.setuptools.dynamic]
+version = {attr = "_version.__version__"}
