--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -96,6 +96,10 @@ jobs:
               elif command -v apt-get; then apt-get update && apt-get install -y --no-install-recommends libgomp1;
               fi
             "
+
+          CIBW_MANYLINUX_X86_64_IMAGE: manylinux_2_28
+          
+          CIBW_ENVIRONMENT: CXXFLAGS="/std:c++17"
           
           CIBW_SKIP: "*-musllinux* pp* *_i686"
 
